--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,6 +12,8 @@ body,
   padding: 0;
   margin: 0;
   font-family: 'Product Sans' !important;
+  background-color: #494947;
+  color: #92DCE5;
 }
 
 a {
