--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,26 +1,23 @@
-@import url('https://fonts.googleapis.com/css?family=Product+Sans:300,400,500,700,300i,400i,500i,700i&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Product+Sans:300,400,500,700,300i,400i,500i,700i&display=swap');
 
-$rootFontSize: 16px;
+// $rootFontSize: 16px;
 
-:root {
-  font-size: $rootFontSize;
-}
+// :root {
+//   font-size: $rootFontSize;
+// }
 
-html,
-body,
-* {
-  padding: 0;
-  margin: 0;
-  font-family: 'Product Sans' !important;
-  background-color: #494947;
-  color: #92DCE5;
-}
+// html,
+// body,
+// *:not(svg) {
+//   padding: 0;
+//   margin: 0;
+//   font-family: 'Product Sans' !important;
+//   box-sizing: border-box;
+//   background-color: #494947;
+//   color: #92DCE5;
+// }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
+// a {
+//   color: inherit;
+//   text-decoration: none;
+// }
